force-app/main/default/objects/Compensation__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Compensations</relationshipLabel>
    <relationshipName>Compensations</relationshipName>
    <type>Lookup</type>
</CustomField>