force-app/main/default/objects/Compensation__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>TEXT(YEAR(Date__c)) + &quot;/&quot; + LPAD(TEXT(MONTH(Date__c)),2,&quot;0&quot;)</formula>
    <label>Month &amp; Year</label>
    <type>Text</type>
</CustomField>