force-app/main/default/objects/Compensation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF (Closed__c, &apos;Closed&apos;, &apos;Open&apos;)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>