force-app/main/default/objects/Compensation__c/fields/Total_in_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_in_USD__c</fullName>
    <label>Total in USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>