force-app/main/default/objects/Compensation__c/listViews/All_Compensations.listView-meta.xml
<ListView>
    <fullName>All_Compensations</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Total__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Person__c</columns>
    <columns>Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Compensations</label>
</ListView>