force-app/main/default/objects/Compensation__c/listViews/Unclosed_Compensations.listView-meta.xml
<ListView>
    <fullName>Unclosed_Compensations</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Total__c</columns>
    <columns>Description__c</columns>
    <columns>Date__c</columns>
    <columns>Person__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Person__c</field>
        <operation>notEqual</operation>
        <value>Vlad Lipen</value>
    </filters>
    <filters>
        <field>Person__c</field>
        <operation>notEqual</operation>
        <value>Kirill Gorodensky</value>
    </filters>
    <label>Unclosed Compensations</label>
</ListView>